# MapPFN

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yaml  pytest.yaml  ruff.yaml
baselines/condot/: LICENSE  condot_module.py  layers.py  picnn.py
baselines/condot/original/: npicnn.py
baselines/condot/tests/: test_picnn.py
baselines/metafm/: gnn.py  metafm_module.py  mlp.py
map_pfn/configs/: run_config.py
map_pfn/configs/data/: base_config.py  config_stores.py
map_pfn/configs/train/: base_config.py  baseline_config.py  config_stores.py
map_pfn/data/: data_module.py  linear_scm.py  perturbation_dataset.py  scm_dataset.py  sergio_dataset.py  utils.py
map_pfn/data/grn/: LICENSE  grn.py  smallworld.py
map_pfn/data/tests/: test_linear_scm.py  test_scm_datasets.py
map_pfn/eval/: evaluate.py  metrics.py
map_pfn/loss/: loss_fn.py
map_pfn/models/: map_pfn.py  mmdit.py  utils.py
map_pfn/scripts/: generate_data.py  process_rna_data.py  process_sc_data.py  train.py
map_pfn/train/: jax_lightning.py  wsd_schedule.py
map_pfn/utils/: config.py  helpers.py  lightning.py  logging.py  run.py
rebuttal/: README.md
static/css/: index.css
static/js/: index.js
